# Range-Tree-Tester

./: CMakeLists.txt  README.md
data/: plotResult.ipynb
data/.ipynb_checkpoints/: plotResult-checkpoint.ipynb
include/: data_generator.h  experiment_app.h  fc_range_tree.h  org_range_tree.h  types.h  utils.h
src/: data_generator.cpp  experiment_app.cpp  fc_range_tree.cpp  main.cpp  org_range_tree.cpp
